--- a/result/z_malamal.html
+++ b/result/z_malamal.html
@@ -20,7 +20,8 @@
             margin: 0;
             padding: 20px;
             font-family: 'NikoshBan', 'Nikosh', sans-serif;
-            font-size: 11.4pt; /* increased 20% */
+            font-size: 11.4pt;
+            /* increased 20% */
         }
 
         .legal-page {
@@ -91,7 +92,8 @@
         .summary-table td {
             border: 1px solid black !important;
             padding: 4px;
-            font-size: 12pt; /* increased 20% */
+            font-size: 12pt;
+            /* increased 20% */
         }
 
         @page {
@@ -157,11 +159,13 @@
         }
 
         .materials-table td {
-            font-size: 10.2pt; /* increased 20% */
+            font-size: 10.2pt;
+            /* increased 20% */
         }
 
         .allowance-table td {
-            font-size: 9.6pt; /* increased 20% */
+            font-size: 9.6pt;
+            /* increased 20% */
         }
 
         .signature-table td {
@@ -171,26 +175,29 @@
         .page-header {
             position: relative;
             margin-top: 5px;
-            padding-bottom: 28px; /* spacing to fit two stacked headings */
+            padding-bottom: 28px;
+            /* spacing to fit two stacked headings */
             text-align: center;
         }
 
-        .page-header + p {
-            margin-top: 8px; /* extra gap for readability */
+        .page-header+p {
+            margin-top: 8px;
+            /* extra gap for readability */
         }
 
         /* Headings flow naturally so multiple lines stack */
         .page-header h1 {
             position: static;
             margin: 0;
-            font-size: 16.8pt; /* increased 20% */
+            font-size: 16.8pt;
+            /* increased 20% */
             line-height: 1.15;
             white-space: normal;
             text-align: center;
         }
 
         /* Slightly smaller and spaced second heading */
-        .page-header h1 + h1 {
+        .page-header h1+h1 {
             margin-top: 6px;
             font-size: 14pt;
         }
@@ -200,7 +207,8 @@
             right: 0;
             top: 0;
             text-align: right;
-            font-size: 16.8pt; /* increased 20% */
+            font-size: 16.8pt;
+            /* increased 20% */
             white-space: nowrap;
         }
 
@@ -624,11 +632,12 @@
             <table width="100%" class="summary-table">
                 <thead>
                     <tr class="bg-gray text-center fw-bold">
-                        <td width="5%">ক্রঃ</td>
-                        <td width="10%">কেন্দ্র কোড</td>
-                        <td width="35%">কেন্দ্রের নাম</td>
-                        <td width="15%">মোট ভোটার</td>
-                        <td width="35%">ব্যালট পেপার ক্রমিক</td>
+                        <td width="3%">ক্রঃ</td>
+                        <td width="5%">কেন্দ্র কোড</td>
+                        <td width="22%">কেন্দ্রের নাম</td>
+                        <td width="10%">মোট ভোটার</td>
+                        <td width="30%">জাতীয় সংসদ নির্বাচনের ব্যালট পেপার</td>
+                        <td width="30%">গণভোট ব্যালট পেপার</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -679,14 +688,14 @@
 
                     // Cumulative Voter Serial calculation for ALL centers
                     let currentSerial = 1;
-                    
+
                     // Referendum ranges logic
                     let refRange1 = { start: 1, end: 134331, current: 1 };
                     let refRange2 = { start: 1710001, end: 2000000, current: 1710001 };
 
                     const centersWithRange = data.map(d => {
                         const voterCount = parseInt(this.toEn(d.total_voter || 0));
-                        
+
                         // Normal Ballot Paper Serial
                         const start = currentSerial;
                         const end = currentSerial + voterCount - 1;
@@ -742,7 +751,8 @@
                                     <td class="text-center">${this.toBn(d.vote_centre_code)}</td>
                                     <td>${d.vote_centre_name}</td>
                                     <td class="text-center">${this.toBn(d.total_voter)}</td>
-                                    <td class="text-center fw-bold" style="font-size: 13.2pt;">${this.toBn(d.startSerial)} - ${this.toBn(d.endSerial)}</td>
+                                    <td class="text-center fw-bold" style="font-size: 11pt;">${this.toBn(this.padZero(d.startSerial, 7))} - ${this.toBn(this.padZero(d.endSerial, 7))}</td>
+                                    <td class="text-center fw-bold" style="font-size: 11pt;">${d.referendumSerial}</td>
                                 </tr>
                             `;
                         });
