--- a/result/gonovot_3.html
+++ b/result/gonovot_3.html
@@ -276,7 +276,7 @@
 						<p style="margin:0 0 0.1in; font-size:14pt; font-weight:bold;">মোট ভোটার সংখ্যা</p>
 					</td>
 					<td class="value" style="width:70%; padding:0 0.08in;">
-						<p class="center" style="margin:0; font-size:14pt;"><span class="total-voter">total_voter</span>
+						<p style="margin:0; font-size:14pt; text-align:left;"><span class="total-voter">** জন</span>
 						</p>
 					</td>
 				</tr>
