--- a/result/gonovot_3.html
+++ b/result/gonovot_3.html
@@ -220,7 +220,7 @@
 					<p class="doc-title">গণভোট</p>
 					<p class="doc-subtitle">ফরম 3</p>
 					<p class="doc-note">[গণভোট অধ্যাদেশ-ধারা-14 (5) দ্রষ্টব্য]</p>
-					<p class="doc-title"><b>ত্রয়োদশ জাতীয় সংসদ নির্বাচন-২০২৬
+					<p class="doc-title">
 							<br>ভোটকেন্দ্রের ভোট গণনার বিবরণী</b></p>
 				</div>
 			</div>
@@ -234,8 +234,7 @@
 							<font face="Vrinda">
 								<font size="3" style="font-size: 12pt"><span lang="ar-SA">
 										<font face="NikoshBAN">
-											<font size="4" style="font-size: 14pt"><span lang="bn-IN">নির্বাচনি
-													এলাকার নম্বর ও নাম</span></font>
+											<font size="4" style="font-size: 14pt"><span lang="bn-IN">নির্বাচনি এলাকার নম্বর ও নাম</span></font>
 										</font>
 									</span></font>
 							</font>
@@ -305,14 +304,14 @@
 				<col width="43*" />
 				<tr>
 					<td style="width:19%; border:1px solid #000; padding:6px; text-align:center;">
-						<p style="margin:0; font-weight:bold;">সিটি কর্পোরেশন / পৌরসভা / ইউনিয়ন</p>
+						<p style="margin:0; font-weight:bold;">ইউনিয়ন/পৌরসভা</p>
 					</td>
 					<td width="14%" style="border: 1px solid #000000; padding: 0in 0.08in">
 						<p align="center" style="orphans: 2; widows: 2"><span class="vote-centre-area"></span></p>
 					</td>
 					<td width="17%" style="border: 1px solid #000000; padding: 0in 0.08in">
 						<p align="center" style="orphans: 2; widows: 2">
-							উপজেলা / থানা</p>
+							উপজেলা/থানা</p>
 					</td>
 					<td width="17%" style="border: 1px solid #000000; padding: 0in 0.08in">
 						<p align="center" style="orphans: 2; widows: 2">
@@ -343,11 +342,11 @@
 					<col style="width:13%" />
 				</colgroup>
 				<tr>
-					<td class="center"><strong>হ্যাঁ ভোটের সংখ্যা<br />(অংকে ও কথায়)</strong></td>
-					<td class="center"><strong>না ভোটের সংখ্যা<br />(অংকে ও কথায়)</strong></td>
-					<td class="center"><strong>প্রদত্ত বৈধ ভোটের সংখ্যা<br />[(1)+(2)]</strong></td>
-					<td class="center"><strong>অবৈধ / গণনা বহির্ভূত ভোটের সংখ্যা</strong></td>
-					<td class="center"><strong>প্রদত্ত মোট ভোটের সংখ্যা<br />[(3)+(4)]</strong></td>
+					<td class="center"><strong>"হ্যাঁ" ভোটের সংখ্যা<br />(অংকে ও কথায়)</strong></td>
+					<td class="center"><strong>"না" ভোটের সংখ্যা<br />(অংকে ও কথায়)</strong></td>
+					<td class="center"><strong>প্রদত্ত বৈধ ভোটের সংখ্যা<br />[(1)+(2) এর সমষ্টি]</strong></td>
+					<td class="center"><strong>অবৈধ বা গণনা বহির্ভূত ব্যালট পেপারের সংখ্যা</strong></td>
+					<td class="center"><strong>প্রদত্ত মোট ভোটের সংখ্যা<br />[(3)+(4) এর সমষ্টি]</strong></td>
 					<td class="center"><strong>শতকরা হার</strong></td>
 				</tr>
 				<tr>
@@ -366,14 +365,7 @@
 					<td class="center"><span class="total-with-rejected">Total_yes+no & rejected_gonovot</span></td>
 					<td class="center"><span class="percentage">Percentige (with total_voter)</span></td>
 				</tr>
-				<tr>
-					<td class="center">&nbsp;</td>
-					<td class="center">&nbsp;</td>
-					<td class="center">&nbsp;</td>
-					<td class="center">&nbsp;</td>
-					<td class="center">&nbsp;</td>
-					<td class="center">&nbsp;</td>
-				</tr>
+			
 			</table>
 			<div class="footer-section">
 				<div class="footer-left">
