--- a/result/gonovot_3.html
+++ b/result/gonovot_3.html
@@ -118,6 +118,11 @@
 			width: 100%;
 		}
 
+		.place-table td:last-child {
+			height: 1.2cm;
+			vertical-align: middle;
+		}
+
 		.signature-box {
 			width: 2.4in;
 			height: 1.1in;
@@ -192,7 +197,7 @@
 
 		/* Make the data cells under ১-৬ larger and centered */
 		.results-table tr.data-row td {
-			min-height: 120px;
+			height: 5cm;
 			/* taller boxes */
 			padding: 12px 8px;
 			vertical-align: middle;
@@ -221,7 +226,8 @@
 					<p class="doc-subtitle">ফরম 3</p>
 					<p class="doc-note">[গণভোট অধ্যাদেশ-ধারা-14 (5) দ্রষ্টব্য]</p>
 					<p class="doc-title">
-							<br>ভোটকেন্দ্রের ভোট গণনার বিবরণী</b></p>
+						<br>ভোটকেন্দ্রের ভোট গণনার বিবরণী</b>
+					</p>
 				</div>
 			</div>
 			<table width="100%" cellpadding="7" cellspacing="0">
@@ -234,7 +240,8 @@
 							<font face="Vrinda">
 								<font size="3" style="font-size: 12pt"><span lang="ar-SA">
 										<font face="NikoshBAN">
-											<font size="4" style="font-size: 14pt"><span lang="bn-IN">নির্বাচনি এলাকার নম্বর ও নাম</span></font>
+											<font size="4" style="font-size: 14pt"><span lang="bn-IN">নির্বাচনি এলাকার
+													নম্বর ও নাম</span></font>
 										</font>
 									</span></font>
 							</font>
@@ -365,7 +372,7 @@
 					<td class="center"><span class="total-with-rejected">Total_yes+no & rejected_gonovot</span></td>
 					<td class="center"><span class="percentage">Percentige (with total_voter)</span></td>
 				</tr>
-			
+
 			</table>
 			<div class="footer-section">
 				<div class="footer-left">
