--- a/result/form_16.html
+++ b/result/form_16.html
@@ -293,9 +293,9 @@
 			<thead>
 				<tr style="background-color: #f8f8f8;">
 					<th style="width: 8%;">ক্রমিক</th>
-					<th style="width: 32%;">নাম ও বিবরণ</th>
+					<th style="width: 32%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনী এজেন্ট/পোলিং এজেন্টের নাম ও বিবরণ</th>
 					<th style="width: 20%;">জাতীয় পরিচয়পত্র নম্বর</th>
-					<th style="width: 25%;">পদবী (টিক দিন)</th>
+					<th style="width: 25%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনী এজেন্ট/পোলিং এজেন্ট এর পদবী (যাহা প্রযোজ্য তাহা উল্লেখ করতে হবে )</th>
 					<th style="width: 15%;">স্বাক্ষর</th>
 				</tr>
 				<tr style="font-size: 10pt; background-color: #f8f8f8;">
