--- a/result/gonovot_3.html
+++ b/result/gonovot_3.html
@@ -302,37 +302,31 @@
 					</td>
 				</tr>
 			</table>
-			<table width="100%" cellpadding="7" cellspacing="0">
-				<col width="50*" />
-				<col width="36*" />
-				<col width="43*" />
-				<col width="43*" />
-				<col width="43*" />
-				<col width="43*" />
+			<table class="info-table" width="100%" cellpadding="0" cellspacing="0">
 				<tr>
-					<td style="width:19%; border:1px solid #000; padding:6px; text-align:center;">
+					<td
+						style="width:18%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
 						<p style="margin:0; font-weight:bold;">ইউনিয়ন/পৌরসভা</p>
 					</td>
-					<td width="14%" style="border: 1px solid #000000; padding: 0in 0.08in">
-						<p align="center" style="orphans: 2; widows: 2"><span class="vote-centre-area"></span></p>
+					<td
+						style="width:16%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
+						<p style="margin:0;"><span class="vote-centre-area"></span></p>
 					</td>
-					<td width="17%" style="border: 1px solid #000000; padding: 0in 0.08in">
-						<p align="center" style="orphans: 2; widows: 2">
-							উপজেলা/থানা</p>
+					<td
+						style="width:16%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
+						<p style="margin:0; font-weight:bold;">উপজেলা/থানা</p>
 					</td>
-					<td width="17%" style="border: 1px solid #000000; padding: 0in 0.08in">
-						<p align="center" style="orphans: 2; widows: 2">
-							<strong class="upozilla">ফেনী সদর</strong>
-						</p>
+					<td
+						style="width:17%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
+						<p style="margin:0;"><strong class="upozilla">ফেনী সদর</strong></p>
 					</td>
-					<td width="17%" style="border: 1px solid #000000; padding: 0in 0.08in">
-						<p align="center" style="orphans: 2; widows: 2">
-							জেলা</p>
+					<td
+						style="width:16%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
+						<p style="margin:0; font-weight:bold;">জেলা</p>
 					</td>
-					<td width="17%" style="border: 1px solid #000000; padding: 0in 0.08in">
-						<p align="center" style="orphans: 2; widows: 2">
-							<strong class="zila">ফেনী</strong>
-						</p>
+					<td
+						style="width:17%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
+						<p style="margin:0;"><strong class="zila">ফেনী</strong></p>
 					</td>
 				</tr>
 			</table>
