--- a/result/form_16.html
+++ b/result/form_16.html
@@ -157,7 +157,7 @@
 		<!-- Info Section -->
 		<table class="info-table" style="margin-bottom: 5px;">
 			<tr>
-				<td class="info-label">নির্বাচনি এলাকার নম্বর ও নাম :</td>
+				<td class="info-label">নির্বাচনী এলাকার নম্বর ও নাম :</td>
 				<td class="info-value">২৬৬, ফেনী-০২</td>
 			</tr>
 			<tr>
@@ -287,7 +287,7 @@
 
 		<!-- Agent Table -->
 		<div style="text-align: center; font-weight: bold; margin-bottom: 5px; font-size: 11pt;">
-			প্রতিদ্বন্দ্বী প্রার্থী/নির্বাচনি এজেন্ট/পোলিং এজেন্টের নাম ও স্বাক্ষর
+			প্রতিদ্বন্দ্বী প্রার্থী/নির্বাচনো এজেন্ট/পোলিং এজেন্টের নাম ও স্বাক্ষর
 		</div>
 		<table class="data-table" style="width: 100%;">
 			<thead>
@@ -311,35 +311,35 @@
 					<td class="text-center">১</td>
 					<td></td>
 					<td></td>
-					<td class="text-center" style="font-size: 9pt;">প্রার্থী / এজেন্ট / পোলিং</td>
+					<td class="text-center" style="font-size: 9pt;"> </td>
 					<td></td>
 				</tr>
 				<tr style="height: 28px;">
 					<td class="text-center">২</td>
 					<td></td>
 					<td></td>
-					<td class="text-center" style="font-size: 9pt;">প্রার্থী / এজেন্ট / পোলিং</td>
+					<td class="text-center" style="font-size: 9pt;"></td>
 					<td></td>
 				</tr>
 				<tr style="height: 28px;">
 					<td class="text-center">৩</td>
 					<td></td>
 					<td></td>
-					<td class="text-center" style="font-size: 9pt;">প্রার্থী / এজেন্ট / পোলিং</td>
+					<td class="text-center" style="font-size: 9pt;"></td>
 					<td></td>
 				</tr>
 				<tr style="height: 28px;">
 					<td class="text-center">৪</td>
 					<td></td>
 					<td></td>
-					<td class="text-center" style="font-size: 9pt;">প্রার্থী / এজেন্ট / পোলিং</td>
+					<td class="text-center" style="font-size: 9pt;"></td>
 					<td></td>
 				</tr>
 				<tr style="height: 28px;">
 					<td class="text-center">৫</td>
 					<td></td>
 					<td></td>
-					<td class="text-center" style="font-size: 9pt;">প্রার্থী / এজেন্ট / পোলিং</td>
+					<td class="text-center" style="font-size: 9pt;"> </td>
 					<td></td>
 				</tr>
 			</tbody>
