--- a/result/gonovot_3.html
+++ b/result/gonovot_3.html
@@ -318,7 +318,7 @@
 					</td>
 					<td
 						style="width:17%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
-						<p style="margin:0;"><strong class="upozilla">ফেনী সদর</strong></p>
+						<p style="margin:0;"><class="upozilla">ফেনী সদর</strong></p>
 					</td>
 					<td
 						style="width:16%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
@@ -326,7 +326,7 @@
 					</td>
 					<td
 						style="width:17%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
-						<p style="margin:0;"><strong class="zila">ফেনী</strong></p>
+						<p style="margin:0;"><class="zila">ফেনী</strong></p>
 					</td>
 				</tr>
 			</table>
