--- a/result/form_16.html
+++ b/result/form_16.html
@@ -157,7 +157,7 @@
 		<!-- Info Section -->
 		<table class="info-table" style="margin-bottom: 5px;">
 			<tr>
-				<td class="info-label">নির্বাচনী এলাকার নম্বর ও নাম :</td>
+				<td class="info-label">নির্বাচনি এলাকার নম্বর ও নাম :</td>
 				<td class="info-value">২৬৬, ফেনী-০২</td>
 			</tr>
 			<tr>
@@ -258,9 +258,10 @@
 			<table style="width: 100%; border: none;">
 				<tr>
 					<td style="width: 60%; border: none; vertical-align: top;">
-						<div style="margin-bottom: 8px;">
-							স্থান: <span
-								style="display: inline-block; width: 180px; border-bottom: 1px dashed #000;"></span>
+						<div style="margin-bottom: 8px; display: flex; align-items: start;">
+							<span>স্থান:</span>
+							<span
+								style="display: inline-block; width: 450px; height: 1.3cm; border: 1px solid #000; margin-left: 8px;"></span>
 						</div>
 						<div style="display: flex; align-items: center;">
 							তারিখ:
@@ -278,8 +279,9 @@
 					</td>
 					<td style="width: 40%; border: none; text-align: center; vertical-align: top;">
 						<div class="signature-box"
-							style="height: 50px; border: 1px solid #000; width: 90%; margin: 0 auto 5px auto;"></div>
-						<div style="font-size: 10pt;">প্রিজাইডিং অফিসারের স্বাক্ষর<br>নাম ও পদবিসহ সিল</div>
+							style="height: 1.2in; border: 1px solid #000; width: 100%; margin: 0 auto 5px auto;"></div>
+						<div style="font-size: 13pt; font-weight: bold; line-height: 1.2;">প্রিজাইডিং অফিসারের<br>নাম,
+							পদবি ও স্বাক্ষর</div>
 					</td>
 				</tr>
 			</table>
@@ -287,15 +289,16 @@
 
 		<!-- Agent Table -->
 		<div style="text-align: center; font-weight: bold; margin-bottom: 5px; font-size: 11pt;">
-			প্রতিদ্বন্দ্বী প্রার্থী/নির্বাচনো এজেন্ট/পোলিং এজেন্টের নাম ও স্বাক্ষর
+			প্রতিদ্বন্দ্বী প্রার্থী/নির্বাচনি এজেন্ট/পোলিং এজেন্টের নাম ও স্বাক্ষর
 		</div>
 		<table class="data-table" style="width: 100%;">
 			<thead>
 				<tr style="background-color: #f8f8f8;">
 					<th style="width: 8%;">ক্রমিক</th>
-					<th style="width: 32%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনী এজেন্ট/পোলিং এজেন্টের নাম ও বিবরণ</th>
+					<th style="width: 32%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্টের নাম ও বিবরণ</th>
 					<th style="width: 20%;">জাতীয় পরিচয়পত্র নম্বর</th>
-					<th style="width: 25%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনী এজেন্ট/পোলিং এজেন্ট (যাহা প্রযোজ্য তাহা উল্লেখ করতে হবে )</th>
+					<th style="width: 25%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্ট (যাহা প্রযোজ্য তাহা
+						উল্লেখ করতে হবে )</th>
 					<th style="width: 15%;">স্বাক্ষর</th>
 				</tr>
 				<tr style="font-size: 10pt; background-color: #f8f8f8;">
