--- a/result/form_16.html
+++ b/result/form_16.html
@@ -50,6 +50,7 @@
 			/* Tight padding */
 			vertical-align: middle;
 			/* Better align */
+			font-weight: normal;
 		}
 
 		/* Helper classes */
@@ -66,6 +67,10 @@
 		}
 
 		.font-bold {
+			font-weight: bold;
+		}
+
+		.candidate-sign {
 			font-weight: bold;
 		}
 
@@ -218,7 +223,7 @@
 					<td></td>
 				</tr>
 				<!-- Totals Row -->
-				<tr style="height: 30px; font-weight: bold; background-color: #f8f8f8;">
+				<tr style="height: 30px; background-color: #f8f8f8;">
 					<td class="text-center">মোট</td>
 					<td></td>
 					<td></td>
@@ -295,7 +300,7 @@
 			<thead>
 				<tr style="background-color: #f8f8f8;">
 					<th style="width: 8%;">ক্রমিক</th>
-					<th style="width: 32%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্টের নাম ও বিবরণ</th>
+					<th style="width: 32%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্টের নাম</th>
 					<th style="width: 20%;">জাতীয় পরিচয়পত্র নম্বর</th>
 					<th style="width: 25%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্ট (যাহা প্রযোজ্য তাহা
 						উল্লেখ করতে হবে )</th>
