--- a/result/gonovot_3.html
+++ b/result/gonovot_3.html
@@ -238,10 +238,11 @@
 						style="border-top: none; border-bottom: none; border-left: none; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0in; padding-left: 0in; padding-right: 0.08in">
 						<p align="left" style="orphans: 2; widows: 2">
 							<font face="Vrinda">
-								<font size="3" style="font-size: 12pt"><span lang="ar-SA">
+								<font size="3" style="font-size: 14pt"><span lang="ar-SA">
 										<font face="NikoshBAN">
-											<font size="4" style="font-size: 14pt"><span lang="bn-IN">নির্বাচনি এলাকার
-													নম্বর ও নাম</span></font>
+											<font size="4" style="font-size: 16pt"><span lang="bn-IN"><b>নির্বাচনি
+														এলাকার
+														নম্বর ও নাম</b></span></font>
 										</font>
 									</span></font>
 							</font>
@@ -318,7 +319,9 @@
 					</td>
 					<td
 						style="width:17%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
-						<p style="margin:0;"><class="upozilla">ফেনী সদর</strong></p>
+						<p style="margin:0;">
+							<class="upozilla">ফেনী সদর</strong>
+						</p>
 					</td>
 					<td
 						style="width:16%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
@@ -326,7 +329,9 @@
 					</td>
 					<td
 						style="width:17%; border:1px solid #000; padding:8px; text-align:center; vertical-align:middle;">
-						<p style="margin:0;"><class="zila">ফেনী</strong></p>
+						<p style="margin:0;">
+							<class="zila">ফেনী</strong>
+						</p>
 					</td>
 				</tr>
 			</table>
