--- a/result/form_16.html
+++ b/result/form_16.html
@@ -156,7 +156,7 @@
 			</div>
 			<div class="header-title">ফরম ১৬</div>
 			<div class="header-subtitle">[বিধি ২৪(১) দ্রষ্টব্য]</div>
-			<div style="font-size: 16pt; font-weight: bold;">ত্রয়োদশ জাতীয় সংসদ নির্বাচন ভোট গণনার বিবরণী</div>
+			<div style="font-size: 16pt; font-weight: bold;">জাতীয় সংসদ নির্বাচন ভোট গণনার বিবরণী</div>
 		</div>
 
 		<!-- Info Section -->
