--- a/result/form_16.html
+++ b/result/form_16.html
@@ -252,7 +252,7 @@
 			</table>
 			<table class="data-table" style="width: 100%;">
 				<tr>
-					<td style="width: 75%; border-right: none; font-weight: bold;">(৩) মোট : [(১) ও (২) এর সমষ্টি]</td>
+					<td style="width: 75%; border-right: none; ">(৩) মোট : [(১) ও (২) এর সমষ্টি]</td>
 					<td style="width: 25%;"></td>
 				</tr>
 			</table>
@@ -294,7 +294,7 @@
 
 		<!-- Agent Table -->
 		<div style="text-align: center; font-weight: bold; margin-bottom: 5px; font-size: 11pt;">
-			প্রতিদ্বন্দ্বী প্রার্থী/নির্বাচনি এজেন্ট/পোলিং এজেন্টের নাম ও স্বাক্ষর
+			প্রতিদ্বন্দ্বী প্রার্থী/নির্বাচনি এজেন্ট/পোলিং এজেন্ট এর নাম ও স্বাক্ষর
 		</div>
 		<table class="data-table" style="width: 100%;">
 			<thead>
@@ -302,8 +302,7 @@
 					<th style="width: 8%;">ক্রমিক</th>
 					<th style="width: 32%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্টের নাম</th>
 					<th style="width: 20%;">জাতীয় পরিচয়পত্র নম্বর</th>
-					<th style="width: 25%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্ট (যাহা প্রযোজ্য তাহা
-						উল্লেখ করতে হবে )</th>
+					<th style="width: 25%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্ট (যাহা প্রযোজ্য তাহা উল্লেখ করতে হইবে)</th>
 					<th style="width: 15%;">স্বাক্ষর</th>
 				</tr>
 				<tr style="font-size: 10pt; background-color: #f8f8f8;">
