--- a/result/form_16.html
+++ b/result/form_16.html
@@ -285,8 +285,8 @@
 					<td style="width: 40%; border: none; text-align: center; vertical-align: top;">
 						<div class="signature-box"
 							style="height: 1.2in; border: 1px solid #000; width: 100%; margin: 0 auto 5px auto;"></div>
-						<div style="font-size: 13pt; font-weight: bold; line-height: 1.2;">প্রিজাইডিং অফিসারের<br>নাম,
-							পদবি ও স্বাক্ষর</div>
+						<div style="font-size: 13pt; font-weight: bold; line-height: 1.2;">প্রিজাইডিং অফিসারের স্বাক্ষর<br>নাম ও
+							পদবিসহ সিল</div>
 					</td>
 				</tr>
 			</table>
@@ -294,14 +294,14 @@
 
 		<!-- Agent Table -->
 		<div style="text-align: center; font-weight: bold; margin-bottom: 5px; font-size: 11pt;">
-			প্রতিদ্বন্দ্বী প্রার্থী/নির্বাচনি এজেন্ট/পোলিং এজেন্ট এর নাম ও স্বাক্ষর
+			প্রতিদ্বন্দ্বী প্রার্থী/নির্বাচনি এজেন্ট/পোলিং এজেন্টের নাম ও স্বাক্ষর
 		</div>
 		<table class="data-table" style="width: 100%;">
 			<thead>
 				<tr style="background-color: #f8f8f8;">
 					<th style="width: 8%;">ক্রমিক</th>
-					<th style="width: 32%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্টের নাম</th>
-					<th style="width: 20%;">জাতীয় পরিচয়পত্র নম্বর</th>
+					<th style="width: 32%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্ট এর নাম</th>
+					<th style="width: 20%;">জাতীয় পরিচয়পত্রের নম্বর</th>
 					<th style="width: 25%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্ট (যাহা প্রযোজ্য তাহা উল্লেখ করতে হইবে)</th>
 					<th style="width: 15%;">স্বাক্ষর</th>
 				</tr>
