--- a/result/form_16.html
+++ b/result/form_16.html
@@ -302,7 +302,7 @@
 					<th style="width: 8%;">ক্রমিক</th>
 					<th style="width: 32%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্ট এর নাম</th>
 					<th style="width: 20%;">জাতীয় পরিচয়পত্রের নম্বর</th>
-					<th style="width: 25%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্ট (যাহা প্রযোজ্য তাহা উল্লেখ করতে হইবে)</th>
+					<th style="width: 25%;">প্রতিদ্বন্দ্বী প্রার্থী/ নির্বাচনি এজেন্ট/পোলিং এজেন্ট (যাহা প্রযোজ্য তাহা উল্লেখ করিতে হইবে)</th>
 					<th style="width: 15%;">স্বাক্ষর</th>
 				</tr>
 				<tr style="font-size: 10pt; background-color: #f8f8f8;">
